--- a/train_id_with_wav2vec.yaml
+++ b/train_id_with_wav2vec.yaml
@@ -54,7 +54,7 @@ test_dataloader_options:
     
 
 # BPE parameters
-token_type: bpe  # ["unigram", "bpe", "char"]
+token_type: unigram  # ["unigram", "bpe", "char"]
 character_coverage: 1.0
 
 # Model parameters
