--- a/stt_experiments/train_id_with_wav2vec_534.yaml
+++ b/stt_experiments/train_id_with_wav2vec_534.yaml
@@ -87,8 +87,8 @@ epoch_counter: !new:speechbrain.utils.epoch_loop.EpochCounterWithStopper
 
 augmentation: !new:speechbrain.lobes.augment.SpecAugment
     freq_mask: True
-    time_warp: False
-    time_mask: False
+    time_warp: True
+    time_mask: True
 
 enc: !new:speechbrain.nnet.containers.Sequential
     input_shape: [null, null, !ref <wav2vec_output_dim>]
