--- a/stt_experiments/train_id_with_wav2vec_532.yaml
+++ b/stt_experiments/train_id_with_wav2vec_532.yaml
@@ -5,7 +5,7 @@
 # ################################
 
 # Seed needs to be set at top of yaml, before objects with parameters are made
-seed: 522
+seed: 531
 __set_seed: !!python/object/apply:torch.manual_seed [!ref <seed>]
 output_folder: !ref results/wav2vec2_ctc_en/<seed>
 wer_file: !ref <output_folder>/wer.txt
@@ -16,7 +16,7 @@ train_log: !ref <output_folder>/train_log.txt
 wav2vec2_hub: facebook/wav2vec2-base
 
 # Data files
-data_folder: /home/u26/ariesutiono/id  # e.g, /localscratch/cv-corpus-5.1-2020-06-22/fr
+data_folder: /home/u26/ariesutiono/id   # e.g, /localscratch/cv-corpus-5.1-2020-06-22/fr
 train_tsv_file: !ref <data_folder>/train.tsv  # Standard CommonVoice .tsv files
 dev_tsv_file: !ref <data_folder>/dev.tsv  # Standard CommonVoice .tsv files
 test_tsv_file: !ref <data_folder>/test.tsv  # Standard CommonVoice .tsv files
@@ -58,11 +58,11 @@ token_type: char  # ["unigram", "bpe", "char"]
 character_coverage: 1.0
 
 # Model parameters
-# activation: !name:torch.nn.CELU
+# activation: !name:torch.nn.Leaky!new:torch.nn.LeakyReLU
 wav2vec_output_dim: 768
-dnn_neurons: 1024
+dnn_neurons: 500
 freeze_wav2vec: False
-dropout: 0.15
+dropout: 0.5
 
 # Outputs
 output_neurons: !ref <dnn_neurons>  # BPE size, index(blank/eos/bos) = 0
@@ -85,9 +85,10 @@ epoch_counter: !new:speechbrain.utils.epoch_loop.EpochCounterWithStopper
     limit_warmup: 5
     direction: min
 
-augmentation: !new:speechbrain.lobes.augment.TimeDomainSpecAugment
-    sample_rate: !ref <sample_rate>
-    speeds: [95, 100, 105]
+augmentation: !new:speechbrain.lobes.augment.SpecAugment
+    freq_mask: False
+    time_warp: True
+    time_mask: False
 
 enc: !new:speechbrain.nnet.containers.Sequential
     input_shape: [null, null, !ref <wav2vec_output_dim>]
@@ -95,21 +96,21 @@ enc: !new:speechbrain.nnet.containers.Sequential
         n_neurons: !ref <dnn_neurons>
         bias: True
     bn1: !name:speechbrain.nnet.normalization.BatchNorm1d
-    activation: !new:torch.nn.CELU
+    activation: !new:torch.nn.LeakyReLU
     drop: !new:torch.nn.Dropout
         p: !ref <dropout>
     linear2: !name:speechbrain.nnet.linear.Linear
         n_neurons: !ref <dnn_neurons>
         bias: True
     bn2: !name:speechbrain.nnet.normalization.BatchNorm1d
-    activation2: !new:torch.nn.CELU
+    activation2: !new:torch.nn.LeakyReLU
     drop2: !new:torch.nn.Dropout
         p: !ref <dropout>
     linear3: !name:speechbrain.nnet.linear.Linear
         n_neurons: !ref <dnn_neurons>
         bias: True
     bn3: !name:speechbrain.nnet.normalization.BatchNorm1d
-    activation3: !new:torch.nn.CELU
+    activation3: !new:torch.nn.LeakyReLU
     
 
 wav2vec2: !new:speechbrain.lobes.models.huggingface_wav2vec.HuggingFaceWav2Vec2
